<resources>
    <string name="app_name">HomeLinks</string>


    <!-- Network -->
    <string name="failed_connect_to_server">Failed to connect to server</string>


    <!-- Menu texts -->
    <string name="settings">Settings</string>
    <string name="add_new_link">Add new link</string>
    <string name="become_premium_user">Become a premium user</string>
    <string name="search">Search</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="about_us">About Us</string>
    <string name="dashboard">Dashboard</string>


    <!-- Actions -->
    <string name="bookmark">Bookmark</string>


    <!-- Authentication Texts -->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="login_2" translatable="false">Log in.</string>
    <string name="signup">Sign Up</string>
    <string name="signup_2" translatable="false">Sign up.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_login_details">Forgot your login details?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="username_cant_be_blank">Username cannot be blank</string>
    <string name="email_cant_be_blank">Email cannot be blank</string>
    <string name="password_cant_be_blank">Password cannot be blank</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Return back to login</string>
    <string name="repeat_password">Repeat password</string>


    <!-- Preferences Keys -->
    <string name="pref_user_token" translatable="false">pref_token</string>
    <string name="pref_user_email" translatable="false">pref_user_email</string>
    <string name="pref_user_name" translatable="false">pref_user_name</string>
    <string name="pref_user_first_name" translatable="false">pref_user_first_name</string>
    <string name="pref_user_last_name" translatable="false">pref_user_last_name</string>
    <string name="pref_user_pass" translatable="false">pref_user_pass</string>


    <!-- Texts -->
    <string name="created_at">Created at</string>
    <string name="posted_by">Posted by</string>
    <string name="website">Website</string>
    <string name="websites">Websites</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="group">Group</string>
    <string name="groups">Groups</string>
    <string name="instagram">Instagram</string>
    <string name="instagrams">Instagrams</string>

    <string name="application">Application</string>
    <string name="title">Title</string>
    <string name="channel_id">Channel ID</string>
    <string name="page_id">Page ID</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="url">URL</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="author">Author</string>
    <string name="next">Next</string>
    <string name="select_link_type">Select link type</string>

    <string name="load_more_websites">Load more Websites</string>
    <string name="load_more_channels">Load more Channels</string>
    <string name="load_more_groups">Load more Groups</string>
    <string name="load_more_instagrams">Load more Instagrams</string>
    <string name="all">All</string>


    <!-- Channel Applications Spinner -->
    <string name="default_application">(Select application name)</string>
    <string-array name="channel_applications">
        <item>@string/default_application</item>
        <item>@string/telegram</item>
        <item>@string/soroush</item>
        <item>@string/gap</item>
        <item>@string/igap</item>
        <item>@string/eitaa</item>
    </string-array>


    <!-- Group Applications Spinner -->
    <string-array name="group_applications">
        <item>@string/default_application</item>
        <item>@string/whatsapp</item>
        <item>@string/telegram</item>
        <item>@string/soroush</item>
        <item>@string/gap</item>
        <item>@string/igap</item>
        <item>@string/eitaa</item>
    </string-array>

    <!-- Website types Spinner -->
    <string name="default_website_type">(Select website type)</string>
    <string-array name="website_types">
        <item>@string/default_website_type</item>
        <item>@string/iranian</item>
        <item>@string/foreign</item>
    </string-array>

    <!-- Link types Spinner -->
    <string name="default_link_type">(Select link type)</string>
    <string-array name="link_types">
        <item>@string/default_link_type</item>
        <item>@string/website</item>
        <item>@string/channel</item>
        <item>@string/group</item>
        <item>@string/instagram</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_channels">My Channels</string>
    <string name="my_groups">My Groups</string>
    <string name="my_instagrams">My Instagrams</string>
    <string name="contact_us">Contact Us</string>
    <string name="categories">Categories</string>

    <string name="about_us_text">
        As you know, it is very important to introduce and mention websites, channels, groups, instagram pages in all
        aspects, especially in the area of new businesses. For this reason, the HomeLinks Group, with the launch of the
        most comprehensive and smartest application in the field of linking, intends to play its role well and do a lot
        of help to you respectable users.
    </string>

    <string name="homelinks_address">Homelinks website: https://homelinks.ir</string>
    <string name="add_channel">Create Channel</string>
    <string name="add_group">Create Group</string>
    <string name="add_instagram">Create Instagram</string>
    <string name="add_website">Create Website</string>
    <string name="report_link">Report link</string>
    <string name="report">Report</string>
    <string name="join">Join</string>
    <string name="view_join">View/Join</string>
    <string name="report_sent">Report sent</string>
    <string name="this_field_cant_be_blank">This field cannot be blank</string>
    <string name="change_password">Change password</string>
    <string name="links">Links</string>
    <string name="edit_user">Edit user</string>
    <string name="edit_info">Edit user information</string>
    <string name="sign_in">Sign In</string>
    <string name="account_updated">Your account has been updated successfully</string>
    <string name="account_update_failed">Failed to update user information</string>
    <string name="edit_account">Edit account</string>
    <string name="my_links">My links</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="sign_out">Sign Out</string>
    <string name="link_updated">Your link was updated successfully</string>
    <string name="link_created">Your link was created</string>
    <string name="link_removed">Link was removed successfully</string>
    <string name="link_remove_failed">Could not remove the link, try again!</string>
    <string name="you_want_to_delete_this_link">Are you sure you want to delete this link?</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="select_image">Select image</string>
    <string name="change_image">Change image</string>
    <string name="status">Status</string>
    <string name="title_cant_be_blank">Title cannot be blank</string>
    <string name="channel_id_cant_be_blank">Channel Id cannot be blank</string>
    <string name="description_cant_be_blank">Description cannot be blank</string>
    <string name="provide_image">Provide an image</string>
    <string name="select_an_application">Select an application</string>
    <string name="home">Home</string>
    <string name="unable_to_fetch_channel">Unable to fetch channel</string>
    <string name="unable_to_fetch_group">Unable to fetch group</string>
    <string name="unable_to_fetch_instagram">Unable to fetch instagram</string>
    <string name="unable_to_fetch_website">Unable to fetch website</string>
    <string name="page_id_cant_be_blank">Page id cannot be blank</string>
    <string name="failed_to_fetch_categories">Failed to fetch categories</string>
    <string name="url_cant_be_blank">Url cannot be blank</string>
    <string name="select_website_type">Select website type</string>
    <string name="failed_update_group">Failed to update group</string>
    <string name="failed_update_website">Failed to update website</string>
    <string name="failed_update_channel">Failed to update channel</string>
    <string name="failed_update_instagram">Failed to update instagram</string>
    <string name="failed_send_message">Failed to send message</string>
    <string name="failed_fetch_data">Failed to fetch report options</string>
    <string name="failed_retrieve_links">Failed to retrieve links</string>
    <string name="dont_have_permission">Can not pick photo without this permission</string>
    <string name="report_type">Report type</string>
    <string name="link_or_slug_not_set">Link or slug not set</string>
    <string name="change_language">Change language</string>
    <string name="english_language" translatable="false">English</string>
    <string name="farsi_language" translatable="false">فارسی</string>
    <string name="link_in_draft_mode">Pending manager approval</string>
    <string name="link_in_published_mode">Published</string>

    <string name="inappropriate_content">Inappropriate content</string>
    <string name="mismatched_title_and_description">Mismatched title and description</string>
    <string name="broken_link">Broken link</string>
    <string name="lang" translatable="false">pref_lang</string>
    <string name="lang_fa" translatable="false">fa</string>
    <string name="lang_en" translatable="false">en</string>
    <string name="key_website" translatable="false">website</string>
    <string name="key_channel" translatable="false">channel</string>
    <string name="key_group" translatable="false">group</string>
    <string name="key_instagram" translatable="false">instagram</string>
    <string name="iranian">Iranian</string>
    <string name="foreign">Foreign</string>
    <string name="telegram">Telegram</string>
    <string name="soroush">Soroush</string>
    <string name="gap">Gap</string>
    <string name="igap">IGap</string>
    <string name="eitaa">Eitaa</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="draft" translatable="false">draft</string>
    <string name="published" translatable="false">published</string>
    <string name="updated" translatable="false">updated</string>
    <string name="link_detail_image">Link Detail Image</string>
    <string name="remember_login_information">remember my login information</string>
    <string name="pref_remember_credential" translatable="false">pref_remember_credential</string>
    <string name="account_created">Account created</string>
    <string name="message_sent">Message sent</string>
    <string name="link_type_not_set">Link type not type</string>
    <string name="banner" translatable="false">Banner</string>
    <string name="description_of_the_ad" translatable="false">Description of the ad.</string>
    <string name="ad_button" translatable="false">Click</string>
    <string name="sponsored" translatable="false">Sponsored</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="user_not_authorized">User is not authorized</string>

</resources>
