<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sign_in_layout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.activity.SignInActivity">


    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/sign_in_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_input_layout"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username_text"
                android:inputType="text"
                android:hint="@string/username"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_input_layout"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/username_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp">

        <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_text"
                android:inputType="textPassword"
                android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/login"
            android:background="@drawable/button_shape"
            android:textColor="@color/white"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"/>


    <TextView
            android:text="@string/forgot_login_details"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_login_detail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
            app:layout_constraintEnd_toStartOf="@+id/reset_password"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBaseline_toBaselineOf="@+id/reset_password"
    />

    <TextView
            android:text="@string/reset_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp"
            app:layout_constraintStart_toEndOf="@+id/forgot_login_detail"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="3dp"/>


    <View
            android:id="@+id/divider"
            android:layout_width="368dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/forgot_login_detail"
            android:layout_marginTop="24dp"/>


    <TextView
            android:text="@string/dont_have_account"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dont_have_account"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toStartOf="@+id/sign_up"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBaseline_toBaselineOf="@+id/sign_up"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:text="@string/signup_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toEndOf="@+id/dont_have_account"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginStart="3dp"/>


</android.support.constraint.ConstraintLayout>