<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:background="@drawable/link_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/link_thumbnail"
            android:src="@drawable/ic_bookmark_black_24dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>


    <TextView
            android:text="@string/title"
            android:maxLength="38"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:id="@+id/link_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/link_thumbnail"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toTopOf="parent"/>


    <TextView
            android:text="@string/created_at"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/link_created"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/link_title"
            app:layout_constraintStart_toEndOf="@+id/link_thumbnail"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>


    <TextView
            android:text="@string/status"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/status"
            app:layout_constraintStart_toEndOf="@+id/link_thumbnail"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_created"
            android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>
